# UNO_Fast_API

./: main.py  pyproject.toml
game_play/card/: card.py  deck.py  stack.py
game_play/game/: game.py
game_play/player/: bot.py  player.py
game_play/test_game/: test_play_game.py
web/Fast_API/: main.py
web/Fast_API/game_play/card/: deck.py  stack.py
web/Fast_API/game_play/game/: game.py
web/Fast_API/game_play/player/: bot.py  player.py
web/Fast_API/game_play/test_game/: test_play_game.py
web/Fast_API/server/manager/: connection_manager.py
