[tool.poetry]
name = "uno-game"
version = "0.0.1"
description = "Game UNO Flip on web"
authors = ["alexqwerty777 <alexqwerty777@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
websockets = "^12.0"
websocket = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
